Converted remaining occurances of stream, release and catch up to branch, commit and update

--- a/bundles/org.eclipse.platform.doc.user/concepts/cnav.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cnav.htm
@@ -22,8 +22,8 @@ as exporting.&nbsp;
 <P CLASS="Para">
 Right-click on any resource in the Navigator view to open a pop-up menu that
 allows you to perform operations such as copying, moving, creating new
-resources, comparing resources with each other, or synchronizing with a team
-stream. To see a description of what each menu item does, move selection
+resources, comparing resources with each other, or performing team
+operations. To see a description of what each menu item does, move selection
 highlight to that menu item and press F1.&nbsp;</P>
 <P CLASS="Para">
 By default, the Navigator view is included in the Resources perspective. To add it
