--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61c_offline.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61c_offline.htm
@@ -11,7 +11,7 @@
 
 <h2>Starting offline</h2>
   <P CLASS="Para">We will start our team CVS tutorial by working offline and creating 
-    a simple project. Once the project is made we will see how to release it to 
+    a simple project. Once the project is made we will see how to commit it to 
     the repository.&nbsp;</P>
 <ol>
   <li>
