--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61d_repolocb.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61d_repolocb.htm
@@ -50,8 +50,9 @@ repository administrator in order to fill in the necessary information.
         <P CLASS="Para">In the <i>Password</i> field, type your password.</P>
   </li>
   <li> 
-        <P CLASS="Para"> In the <i> Connection type </i> field, select the type 
-          of CVS connection for the repository.&nbsp; Choose pserver. </P>
+        
+    <P CLASS="Para"> In the <i> Connection type </i> field, select the type of 
+      CVS connection for the repository (The default is pserver). </P>
   </li>
   <li>
 	  <P CLASS="Para"> Leave<i> Use Default Port</i> enabled.&nbsp;</P> 
