--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62c_releasing.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62c_releasing.htm
@@ -62,7 +62,7 @@ Repository again from the context menu.
 <p>When the
 Synchronize view opens, there is only one change, the new file3.txt.</p>
 <blockquote>
-  <p><img align="texttop" border="0" src="../images/Image82_repo_rel5.jpg" alt="Release mode" width="409" height="169"></p>
+  <p><img align="texttop" border="0" src="../images/Image82_repo_rel5.jpg" alt="Outgoing mode" width="409" height="169"></p>
 </blockquote>
   </li>
   <li>Select file3.txt, and choose Commit from the context menu. </li>
