--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync3_rel.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync3_rel.htm
@@ -28,7 +28,7 @@
     </li>
   <li>
 <p CLASS="Para"> At this point Fred may want to Synchronize 
-      with the repository to catch up to the changes you just committed.</p>
+      with the repository to update his workspace with the changes you just committed.</p>
   </li>
 </ol>
 <P>We have successfully collaborated with Fred by making simultaneous changes 
