--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-74_version.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-74_version.htm
@@ -13,7 +13,7 @@ Versioning your project</h3>
 <P CLASS="Para"> Now that our project is complete it is time to version it. If 
   you were paying close attention while we were committing our file resources 
   you probably noticed that the repository automatically assigned them version 
-  numbers, or to be more accurate &quot;revision numbers&quot;. As we released 
+  numbers, or to be more accurate &quot;revision numbers&quot;. As we committed 
   our files the only information we needed to supply was a commit comment.&nbsp;</P>
 <P CLASS="Para">To version our
 project proceed as follows:</P>
