--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-68.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-68.htm
@@ -32,9 +32,9 @@ resources.
 <dl>
 <dt><b>Compare With &gt; Latest From Repository</b></dt>
 <dd>compares the selected resource with the version of the same resource that is
-    currently released to the active branch.</dd>
+    currently committed to the active branch.</dd>
 <dt><b>Compare With &gt; Branch or Version</b></dt>
-<dd>compares the selected resource with a version that has been released to the
+<dd>compares the selected resource with a version that has been committed to the
     repository or to the latest version in a particular branch. This requires
     you to choose a version of the resource or a branch from a list.</dd>
 <dt><b>Compare With &gt; Patch</b></dt>
@@ -43,7 +43,7 @@ resources.
 <dd>compares two or three selected resources with each other</dd>
 <dt><b>Compare With &gt; Revision</b></dt>
 <dd>compares the selected resource with a version of the same resource that was
-    released to the active branch. This requires you to choose a revision of the
+    committed to the active branch. This requires you to choose a revision of the
     resource from a list.</dd>
 <dt><b>Compare With &gt; Local History</b></dt>
 <dd>compares the selected resource to one that is in the local history, which
