--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61f_syncproject.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61f_syncproject.htm
@@ -18,9 +18,10 @@ to make our project available to other team members.</P>
 In the Navigator view select the project JanesTeamProject.</P>
   </li>
   <li> 
-      <P CLASS="Para">From the project's context menu choose Team &gt; Share Project. 
-        If you have more than one repository provider installed, pick CVS and 
-        press Next. Select the location we created previously.</P>
+      
+    <P CLASS="Para">From the project's context menu choose Team &gt; Share Project. 
+      If you have more than one repository provider installed, pick CVS and press 
+      Next.</P>
   </li>
   <li> 
       <P CLASS="Para"> In the sharing wizard page, select the location we created 
@@ -32,10 +33,9 @@ In the Navigator view select the project JanesTeamProject.</P>
   <li>
       <P CLASS="Para"> Click Finish when you are done.</P>
   </li>
-  <li>Observe that the Synchronize view automatically 
-      opens. In the next section we will see how to use this view to release our 
-      work to the repository. 
-      <blockquote> 
+  <li>Observe that the Synchronize view automatically opens. In the next section 
+    we will see how to use this view to commit our work to the repository. 
+    <blockquote> 
   <p><img align="texttop" border="0" src="../images/Image82_repo_team.jpg" width="428" height="387" alt="Team Perspective"></p>
 </blockquote>
   </li>
