--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_mod.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_mod.htm
@@ -10,7 +10,7 @@
 <BODY BGCOLOR="#ffffff">
 <h3>
 Making our own changes</h3>
-<p CLASS="Para">Fred has made several changes to file1.txt and file2.txt and released 
+<p CLASS="Para">Fred has made several changes to file1.txt and file2.txt and committed 
   them to the repository. We now need to make some changes for ourself and&nbsp; 
   then synchronize with the repository. When we synchronize we expect to see the 
   changes we have made along with changes that have been made by Fred.</p>
