--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-15.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-15.htm
@@ -58,7 +58,7 @@ File name</SPAN>
 MyScrap</SPAN>. The JPAGE file extension will be added automatically, if you do not enter it yourself.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-77.gif" alt="">
+<IMG SRC="../images/qs-77.gif" alt="Create Java Scrapbook Page wizard">
 </DIV>
 </DIV>
 <P CLASS="Para">
@@ -78,7 +78,7 @@ Finish</SPAN>
 The scrapbook page opens in an editor in the editor area. </P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-78.gif" alt="">
+<IMG SRC="../images/qs-78.gif" alt="Package Explorer and editor area of the active perspective">
 </DIV>
 </DIV>
 </TD>
@@ -97,7 +97,7 @@ System.get</SPAN>
 System.getProperties()</SPAN>.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-79.gif" alt="">
+<IMG SRC="../images/qs-79.gif" alt="Content proposals popup">
 </DIV>
 </DIV>
 </TD>
@@ -111,10 +111,10 @@ System.getProperties()</SPAN>.</P>
 <TD valign="top" align="left">
 <P CLASS="Para">
 Select the entire line you just typed and select <SPAN CLASS="Label">
-Display from the context menu (or select the equivalent item the editor toolbar or Run menu).</SPAN></P>
+Display</SPAN> from the context menu (or select the equivalent item the editor toolbar or <SPAN CLASS="Label">Run</SPAN> menu).</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-80.gif" alt="">
+<IMG SRC="../images/qs-80.gif" alt="Snippet editor with System.getProperties() selected showing context menu">
 </DIV>
 </DIV>
 </TD>
