--- a/bundles/org.eclipse.platform.doc.user/whatsNew/wnTeam.htm
+++ b/bundles/org.eclipse.platform.doc.user/whatsNew/wnTeam.htm
@@ -22,7 +22,7 @@ What's new in 2.0</H1>
   <p></P>
   <P CLASS="Para"> 
   <dt>CVS specific terms throughout</dt>
-  <dd>The CVS support uses the same terminology as CVS. This measn that the term 
+  <dd>The CVS support uses the same terminology as CVS. This means that the term 
     branch is used instead of stream, update and commit instead of catchup and 
     release, and version tag instead of version.</dd>
   <p></P>
@@ -35,7 +35,7 @@ What's new in 2.0</H1>
   <p></P>
   <P CLASS="Para"> 
   <dt>CVS Keyword substitution mode</dt>
-  <dd>In addition to test/binary determination, CVS also allows the configuration 
+  <dd>In addition to text/binary determination, CVS also allows the configuration 
     of the keyword substitution mode of each file. This is done using the<b> Team 
     &gt; Change ASCII/Binary Property</b> menu command on a project or resource 
     that is shared with CVS.</dd>
@@ -45,7 +45,7 @@ What's new in 2.0</H1>
   <dd>There have been several improvements related to ignoring resources. As in 
     1.0, global ignores can be defined on the <b>Team &gt; Ignored Resources</b> 
     preference page. In addition, tools integrated with Eclipse can now mark their 
-    binary output as derived. CVS and other repository plugins can automaically 
+    binary output as derived. CVS and other repository plugins can automatically 
     ignore these resources. CVS also provides menus in the Navigator and Synchronize 
     view for adding a resource to the .cvsignore file.</dd>
   <p></P>
@@ -75,7 +75,7 @@ What's new in 2.0</H1>
   <p></P>
   <P CLASS="Para"> 
   <dt>Mark as merged in sync view</dt>
-  <dd>When resolving conflicts in the Synchronize view, and files that have been 
+  <dd>When resolving conflicts in the Synchronize view, files that have been 
     saved will remain in the view until they are marked as being merged using 
     the &quot;Mark as Merged&quot; menu item. This allows multiple edits to be 
     performed on conflicts.</dd>
@@ -83,11 +83,11 @@ What's new in 2.0</H1>
   <P CLASS="Para"> 
   <dt>CVS Console view</dt>
   <dd>The CVS console view contains the messages received from the server while 
-    performing CS commands.</dd>
+    performing CVS commands.</dd>
   <p></P>
   <P CLASS="Para"> 
   <dt>Tag with Existing</dt>
-  <dd>In the CVS Repositories view, CVS supports the moving of existing tags from 
+  <dd>In the CVS Repositories view, CVS supports moving of existing tags from 
     one resource lineup to another.</dd>
   <p></P>
   <P CLASS="Para"> 
@@ -115,15 +115,15 @@ What's new in 2.0</H1>
   <p></P>
   <P CLASS="Para"> 
   <dt>Mixing of tags below the project</dt>
-  <dd>In 1.0, all resources in the porjetc were shared with the same tag (branch 
+  <dd>In 1.0, all resources in the project were shared with the same tag (branch 
     or HEAD). In 2.0, the tags within a project can be mixed (just as with the 
-    cvs command line tool)</dd>
+    CVS command line tool)</dd>
   <p></P>
   <P CLASS="Para"> 
   <dt>Tasks for new and deleted resources</dt>
   <dd>CVS creates tasks in the Tasks view for new resources that have not been 
     added to CVS control or ignored and for deleted resources. Appropriate Quick 
-    Fix menu operationsare available for these tasks. The tasks can also be disabled 
+    Fix menu operations are available for these tasks. The tasks can also be disabled 
     in the <b>Team &gt; CVS</b> preferences page.</dd>
   <p></P>
 </dl>
