--- a/bundles/org.eclipse.platform.doc.user/whatsNew/wnWorkbench.htm
+++ b/bundles/org.eclipse.platform.doc.user/whatsNew/wnWorkbench.htm
@@ -64,7 +64,7 @@ Eclipse Workbench. The following lists some of them.
 <P CLASS="Para">
   <dt>Label decorations</dt>
   <dd>There is a new concept of <a href="../concepts/cdecorations.htm">label decorations</a>. 
-  	Plugins may contribute information to resource labels and icons. You can 
+  	Plug-ins may contribute information to resource labels and icons. You can 
   	select which decorations you would like to see on the 
   	<b>Workbench > Label Decorations</b> preference page.
   </dd>
