--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-172.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-172.htm
@@ -13,8 +13,8 @@
 <h1 class="Head">
 Converting line delimiters</h1>
 
-<div class="Para">Java editor can diplay Java files with various line delimiter
-kinds but some other external editors may not be able to handle them correctly.</div>
+<div class="Para">Java editor can display Java files with various line delimiter 
+  kinds but some other external editors may not be able to handle them correctly.</div>
 
 <div class="Para">You may want to change line delimiters used by your Java
 files.</div>
@@ -28,10 +28,8 @@ Open a Java file in the Java editor</li>
 <li>
 Select <b>Source > Convert Line Delimiters</b> from the menu bar</li>
 
-<li>
-Select the delimiters you want to convert the file to (one of <i>Windows</i>,
-<i>UNIX</i>,
-<i>Mac</i>)</li>
+  <li> Select the delimiters to which you want to convert the file (one of <i>Windows</i>, 
+    <i>UNIX</i>, <i>Mac</i>)</li>
 </ol>
 
 <div class="copyright">
