--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62c_releasing.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62c_releasing.htm
@@ -25,9 +25,8 @@ In the Structured Compare list select file1.txt</P>
 </blockquote>
   </li>
   <li>
-<P CLASS="Para">
-Popup the menu and choose Commit. Click OK when asked to supply a commit
-comment.</P>
+    <P CLASS="Para"> Popup the menu and choose Commit. Click OK when asked to 
+      add and to supply a commit comment.</P>
   </li>
   <li>Observe that file1.txt is no longer in the list.
 <blockquote>
