--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64b_fredadd.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64b_fredadd.htm
@@ -31,8 +31,9 @@ In the CVS Repository Location wizard fill in the same repository location that
 Jane filled in.
   </li>
   <li>
-      <P CLASS="Para">In the CS Repositories view expand the repository location, 
-        then expand HEAD.</P>
+      
+    <P CLASS="Para">In the CVS Repositories view expand the repository location, 
+      then expand HEAD.</P>
 <P CLASS="Para">Under HEAD you should see the project (JanesTeamProject) that
 Jane created.</P>
 <blockquote>
