--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync2.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync2.htm
@@ -32,7 +32,7 @@ modified.&nbsp;
   <li>If you are suspicious of the change you may want to find out some more information
 about the change. To do this you first need to figure out who made the change
 and why.
-<p>In the Navigator select file2.txt and choose Team &gt; Show in Resource
+<p>In the Structure compare pane of the Synchronize view select file2.txt and choose Show in Resource
 History from the context menu.</p>
 <p><img align="texttop" border="0" src="../images/Image84_reshist.jpg" alt="Resource History" width="511" height="164" ></p>
   </li>
