--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-74_review.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-74_review.htm
@@ -16,7 +16,7 @@ A quick review</h3>
 <ul>
   <li>When we versioned the project we did so by versioning the project as it 
     appeared in our Workbench. For this reason it is important to synchronize 
-    the project with the repository (i.e. HEAD or the branch we are working inh) 
+    the project with the repository (i.e. HEAD or the branch we are working in) 
     prior to versioning it. Otherwise another user may have committed interesting 
     changes to the project which you have yet to update to. If you proceed to 
     version the project without updating, you will version it without these changes.&nbsp;</li>
