Fixed minor typo in builder extension example

--- a/bundles/org.eclipse.platform.doc.isv/guide/resAdv_builders.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/resAdv_builders.htm
@@ -86,7 +86,7 @@ incremental project builder to the platform. The following markup shows how the 
 incremental project builder.</P>
 <font color='#4444CC'><pre>
    &lt;extension
-      id=mybuilder name=&quot;My Sample Builder&quot; point=&quot;org.eclipse.core.resources.builders&quot;&gt;
+      id=&quot;mybuilder&quot; name=&quot;My Sample Builder&quot; point=&quot;org.eclipse.core.resources.builders&quot;&gt;
       &lt;builder
          &lt;run 
             <b>class=&quot;com.example.builders.BuilderExample&quot;</b>&gt;
