--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync2.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync2.htm
@@ -36,14 +36,11 @@ and why.
 History from the context menu.</p>
 <p><img align="texttop" border="0" src="../images/Image84_reshist.jpg" alt="Resource History" width="511" height="164" ></p>
   </li>
-  <li>In the Resource History view (see above) we 
-      can see there is a * next to version 1.7. This indicates 1.7 is currently 
-      in our Workbench. Looking at the right pane of the text compare viewer (above) 
-      we can see the repository contains 1.8 of file2.txt.&nbsp; 
-      <p>
-Looking at the history view again we can see that the author of 1.8 is Fred.
-Looks like it's time to ask Fred why he was changing file2.txt.&nbsp;</p>
-<p>If Fred had entered a meaningful description when releasing his changes,
+  <li>In the Resource History view (see above) we can see there is a * next to 
+    version 1.8. This indicates 1.8 is currently in our Workbench. We can also 
+    see the repository contains 1.9 of file2.txt.&nbsp;The author of 1.9 is Fred. 
+    Looks like it's time to ask Fred why he was changing file2.txt.&nbsp; 
+    <p>If Fred had entered a meaningful description when releasing his changes,
 these descriptions would have appeared in the comment field of the Resource
 History view thereby providing us with some insight into the intent of the change.
   </li>
