--- a/bundles/org.eclipse.platform.doc.user/whatsNew/wnTeam.htm
+++ b/bundles/org.eclipse.platform.doc.user/whatsNew/wnTeam.htm
@@ -82,7 +82,7 @@ What's new in 2.0</H1>
   <p></P>
   <P CLASS="Para"> 
   <dt>CVS Console view</dt>
-  <dd>The CVS console view contains the messages received from the server while 
+  <dd>The CVS Console view contains the messages received from the server while 
     performing CVS commands.</dd>
   <p></P>
   <P CLASS="Para"> 
@@ -124,7 +124,7 @@ What's new in 2.0</H1>
   <dd>CVS creates tasks in the Tasks view for new resources that have not been 
     added to CVS control or ignored and for deleted resources. Appropriate Quick 
     Fix menu operations are available for these tasks. The tasks can also be disabled 
-    in the <b>Team &gt; CVS</b> preferences page.</dd>
+    in the <b>Team &gt; CVS</b> preference page.</dd>
   <p></P>
 </dl>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
