--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-158.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-158.htm
@@ -10,18 +10,18 @@
 <body bgcolor="#FFFFFF">
 
 <h1 CLASS="Head"> Parameters page</h1>
+<p>
 <h1 CLASS="Head"><img src="../images/tasks-32.gif" width="347" height="418" alt="Parameters Page for the Reordering method parameters Refactoring Command"></h1>
 
 <div CLASS="FigureTitle"> 
   <p>Parameters Page for the Reordering method parameters Refactoring Command</p>
-  <p>&nbsp;</p>
 </div>
 <ul>
   <li> 
     <div CLASS="FigureTitle">Select one or more paramaters</div>
   </li>
   <li>Use the <b>Move Up</b> and <b>Move Down</b> buttons to reorder the parameters 
-    (you can see the signature preview below the paramater list)</li>
+    (you can see a signature preview below the paramater list)</li>
   <li>Press <b>Next</b> to see the preview or <b>Finish</b> to perfrom the refactoring 
     without seeing the preview</li>
 </ul>
