--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-159.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-159.htm
@@ -21,12 +21,10 @@ variable</li>
 Do one of the following:</li>
 
 <ul>
-<li>
-From the editor's pop-up menu, select Refactor > Extract Local Variable
-or</li>
+    <li> From the editor's pop-up menu, select <b>Refactor > Extract Local Variable</b> 
+      or</li>
 
-<li>
-From the menu bar, select Refactor > Extract Local Variable</li>
+    <li> From the menu bar, select <b>Refactor > Extract Local Variable</b></li>
 </ul>
 </ul>
 <img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
