--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-160.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-160.htm
@@ -10,11 +10,11 @@
 <body bgcolor="#FFFFFF">
 
 <h1 CLASS="Head"> Parameters page</h1>
+<p>
 <h1 CLASS="Head"><img src="../images/tasks-160a.gif" width="463" height="307" alt="Parameters Page for the Extracting a local variable Refactoring Command"></h1>
 
 <div CLASS="FigureTitle"> 
   <p>Parameters Page for the Extracting a local variable Refactoring Command</p>
-  <p>&nbsp;</p>
 </div>
 <ul>
   <li> 
@@ -26,7 +26,7 @@
     only the expression you selected when invoking the refactoring.</li>
   <li>Optionally, select <b>Define the local variable as 'final'</b></li>
   <li>Press <b>Next</b> to see the preview of the changes or <b>Finish</b> to 
-    perform the refactoring wthout preview</li>
+    perform the refactoring without preview</li>
 </ul>
 <div CLASS="XRefList">
 <div CLASS="Para">Related Topics:</div>
