--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-161.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-161.htm
@@ -13,9 +13,8 @@
 Inlining a local variable</h1>
 To inline a local variable:
 <ul>
-<li>
-&nbsp;In a Java editor, select the variable that you want to inline (you
-can select a reference to the variable)</li>
+  <li> In a Java editor, select the variable that you want to inline (you can select 
+    a reference to the variable)</li>
 
 <li>
 Do one of the following:</li>
