--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-164.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-164.htm
@@ -11,7 +11,7 @@
 
 <h1 CLASS="Head">
 Replacing a local variable with a query</h1>
-&nbsp;To replace a local variable with a query:
+<p>To replace a local variable with a query:</p>
 <ul>
 <li>
 In the Java editor, select the expression with which the local variable
