--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-165.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-165.htm
@@ -21,11 +21,9 @@ that you want to pull up.</li>
 Do on of the following:</li>
 
 <ul>
-<li>
-From the menu bar, select Refactor > Pull Up or</li>
+    <li> From the menu bar, select <b>Refactor > Pull Up</b> or</li>
 
-<li>
-From the pop-up menu, select Refactor > Pull Up</li>
+    <li> From the pop-up menu, select <b>Refactor > Pull Up</b></li>
 </ul>
 </ul>
 <b>Note:</b> the selected members must all have the same declaring type
