--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-168.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-168.htm
@@ -10,6 +10,7 @@
 <body bgcolor="#FFFFFF">
 
 <h1 CLASS="Head"> Parameters page</h1>
+<p>
 <h1 CLASS="Head"><img src="../images/tasks-168a.gif" width="520" height="231" alt="Parameters Page for the Moving static members between types Refactoring Command"></h1>
 
 <div CLASS="FigureTitle"> 
@@ -17,8 +18,8 @@
 </div>
 <ul>
   <li> 
-    <div CLASS="FigureTitle"> Use the text field to enter the destination type 
-      name or press the <b>Browse</b> button to see a list of types.</div>
+    Use the text field to enter the destination type 
+      name or press the <b>Browse</b> button to see a list of types.
   </li>
   <li>Press <b>Next</b> to see a preview or press <b>Finish</b> to perform the 
     refactoring without preview.</li>
