--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-166.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-166.htm
@@ -10,20 +10,19 @@
 <body bgcolor="#FFFFFF">
 
 <h1 CLASS="Head"> Parameters page</h1>
+<p>
 <h1 CLASS="Head"><img src="../images/tasks-166a.gif" width="555" height="548" alt="Pulling members up to superclass Refactoring Command"></h1>
 
 <div CLASS="FigureTitle"> 
   <p>Parameters Page for the Pulling members up to superclass Refactoring Command</p>
-  <p>&nbsp;</p>
 </div>
 <ul>
   <li> 
     <div CLASS="FigureTitle">In the left pane, select the methods that you want 
       to be deleted after pull up (so that the superclass implementation can be 
       used instead).</div>
-  </li>
-  <li><b>Note</b>: the methods originally selected when invoking the refactoring 
-    are pre-selected in the left pane</li>
+	<b>Note</b>: the methods originally selected when invoking the refactoring 
+    	are pre-selected in the left pane</li>
   <li>Press <b>Next</b> to see the preview or press <b>Finish</b> to perform the 
     refactoring without preview</li>
 </ul>
