--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-99.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-99.htm
@@ -11,18 +11,16 @@
 
 <h1 CLASS="Head">
 Parameters page</h1>
-
+<p>
 <div CLASS="Figure"><img SRC="../images/tasks-32.gif" NOSAVE height=418 width=347> 
   <div CLASS="FigureTitle">Parameters Page for the Rename Method Parameters
 Refactoring Command</div>
 </div>
 
 <ul>
-<li CLASS="Para">
-Click in the&nbsp;<span CLASS="Label"><b>Name</b></span> column on the
-row containing the parameter you want to change or select the row and press
-the&nbsp;<span CLASS="Label"><b>Edit</b></span> and type a new name for
-the parameter.</li>
+  <li CLASS="Para"> Click in the&nbsp;<span CLASS="Label"><b>Name</b></span> column 
+    on the row containing the parameter you want to change or select the row and 
+    press <span CLASS="Label"><b>Edit</b></span> and type a new name for the parameter.</li>
 </ul>
 
 <div CLASS="XRefList">
