global search replace

--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-5.htm
@@ -9,8 +9,9 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">Search</H1>
-To search for methods with a certain return type:
-<ol>
+<p>&nbsp;</p>
+<p>To search for methods with a certain return type: </p>
+<ul>
   <li>Open the search dialog</li>
   <li>Switch to <strong>Java Search</strong> tab</li>
   <li>Type in the search expression: '* X' (without the quotes, and with a space 
@@ -18,10 +19,13 @@ To search for methods with a certain return type:
   <li>Select <strong>Method</strong> and <strong>Declarations</strong></li>
   <li>Use a working set to make the search faster.</li>
   <li>Press <strong>Search</strong> <br>
-</ol>
-
-<p><br>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
-</p>
-
-</BODY>
+  </li>
+</ul>
+<p>You can do global Find and Replace:</p>
+<ul>
+  <li>First do a File search (choose the File tab in the search dialog). Then 
+    right-click in the search results in the Search view to see the <b>Replace</b> 
+    and <b>Replace Selected</b> pop-up menu items.</li>
+</ul>
+&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></BODY>
 </HTML>
