Spelling and layout corrections

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-103.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-103.htm
@@ -39,10 +39,9 @@ Select the <b>Java Search</b> tab.</li>
 In the&nbsp;<span CLASS="Label"><b>Search String</b></span> field, type
 the string for which you want to search, using wildcards as needed.</li>
 
-<li>
-You can also choose a previous search expression from the drop-down list.
-Selecting a previous search expression resets all values associated with
-that previous search in the dialog.</li>
+  <li> You can also choose a previous search expression from the drop-down list. 
+    Selecting a previous search expression restores all values associated with 
+    that previous search in the dialog.</li>
 
 <li CLASS="Para">
 Select the Java element type in the&nbsp;<span CLASS="Label"><b>Search
