--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-32.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-32.htm
@@ -43,7 +43,7 @@ You can:</P>
   </li>
   <li>
     <p CLASS="Para">Delete the project from the workspace but don't delete its
-    constants in the file system</p>
+    contents in the file system</p>
   </li>
 </ul>
 <p CLASS="Para">Just accept the default (Do not delete contents) and press Yes.</p>
