Corrections and additions

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-14.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-14.htm
@@ -29,6 +29,9 @@ Debug <i>junit.samples.VectorTest.java</i> to a breakpoint at line 26 (see the <
 <P CLASS="Para">
 <SPAN CLASS="Code">
 fFull.size()</SPAN>
+<br>
+<br>
+<b>Note:</b> Instead of typing the full expression by hand you can use code assist to complete it.
 </P>
 </TD>
 </TR>
