--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
@@ -1,13 +1,10 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-  "DTD/xhtml1-strict.dtd">
-<html>
-  <head>
-    <title>Creating your first Java project</title>
-    <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css" />
-    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-    <meta http-equiv="Content-Style-Type" content="text/css" />
-  </head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "DTD/xhtml1-strict.dtd"><html><head><title>Creating your first Java project</title>
+    
+    <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
+    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+    <meta http-equiv="Content-Style-Type" content="text/css"></head>
+
+
   <body>
     <h1 class="Head">Creating your first Java project</h1>
 
@@ -24,7 +21,7 @@
         <p class="Para">
           Open the <span class="Label">New Project</span> wizard
           by selecting the menu item
-          <span class="Label">File > New > Project...</span>.
+          <span class="Label">File &gt; New &gt; Project...</span>.
         </p>
       </li>
 
@@ -38,10 +35,10 @@
 
         <p class="Para">
           In the <span class="Label">Project name</span> field,
-          type &quot;JUnit&quot;, then click
+          type "JUnit", then click
           <span class="Label">Finish</span>.
-          A new Java perspective opens with the new Java project
-          in the Package Explorer view.
+          A new Java perspective opens within the workbench with the new Java project
+          in the Package Explorer.
         </p>
 
         <p class="Para">
@@ -52,13 +49,13 @@
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-4.gif" alt="Java perspective" />
+          <img src="../images/qs-4.gif" alt="Java perspective">
         </div>
       </li>
 
       <li>
         <p class="Para">
-          In the Package Explorer view, make sure that the JUnit project is
+          In the Package Explorer, make sure that the JUnit project is
           selected. Select the menu item
           <span class="Label">File &gt; Import...</span>.
         </p>
@@ -74,8 +71,10 @@
       <li>
         <p class="Para">
           Click the <span class="Label">Browse</span>
-          button next to the <span class="Label">Zip file</span>
-          field and browse to select &lt;workbenchRoot&gt;/plugins/org.eclipse.jdt.ui.examples.projects/archive/junit/junit37src.jar.
+          button next to the <span class="Label">Zip file</span>       
+   field and browse to select &lt;workbenchRoot&gt;/plugins/org.eclipse.jdt.ui.examples.projects/archive/junit/junit37src.jar.<br>
+    <font color="#cc0000"><b>Note:</b> This step assumes that the JDT example&nbsp;</font><font color="#cc0000">plug-ins have been downloaded and installed.</font><br>
+
         </p>
       </li>
 
@@ -102,7 +101,7 @@
         </div>
 
         <div class="Snapshot">
-          <img src="../images/qs-5.gif" alt="Import hierarchy list" />
+          <img src="../images/qs-5.gif" alt="Import hierarchy list">
         </div>
       </li>
 
@@ -130,7 +129,7 @@
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-6.gif" alt="Package explorer" />
+          <img src="../images/qs-6.gif" alt="Package explorer">
         </div>
       </li>
     </ol>
@@ -142,7 +141,7 @@
     views</a><br>
     <br>
   </p>
-  <p> <img src="../images/ngrelt.gif" alt="Related tasks" border=0 height=27 width=159> 
+  <p> <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"> 
   </p>
   <p><a href="../tasks/tasks-110.htm">Working with build paths</a><br>
     <a href="../tasks/tasks-12.htm">Creating 
@@ -152,19 +151,17 @@
   </p>
   
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" />
+      <img src="../images/ngrelr.gif" alt="Related reference">
     </p>
 
     <p>
-      <a href="../reference/ref-121.htm">New Java Project Wizard</a><br />
-      <a href="../reference/ref-view-package-explorer.htm">Package Explorer View</a><br />
+      <a href="../reference/ref-121.htm">New Java Project Wizard</a><br>
+      <a href="../reference/ref-view-package-explorer.htm">Package Explorer View</a><br>
     </p>
 
 <div class="copyright"> 
-  <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif"
-          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved."/> 
+  <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved."> 
     </a>
 </div>
 
-  </body>
-</html>
+  </body></html>
