--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
@@ -54,7 +54,9 @@
           fields, types and methods.
 
           The Outline view also indicates whether a Java element
-          is static, abstract, final, etc.
+          is static, abstract, final, etc. The outline view also shows you whether
+		  a method is overridden from a base class (<img src="../images/org.eclipse.jdt.ui/ovr16/over_co.gif" alt="overriden" />) or when it implements a method
+		  from an interface (<img src="../images/org.eclipse.jdt.ui/ovr16/implm_co.gif" alt="implements" />).
         </p>
 
         <div class="Snapshot">
@@ -505,7 +507,7 @@ assert</pre>
 
 <div class="Topic">
 
-    <h2>Using import assist</h2>
+    <h2>Organizing imports</h2>
 
     <ol>
       <li>
@@ -657,7 +659,7 @@ while (Test.class.isAssignableFrom(superClass)) {
 </div>
 <div class="Topic">
 
-    <h2>Using open on selection and open on type hierarchy</h2>
+    <h2>Using open declaration and open on type hierarchy</h2>
 
     <ol>
       <li>
@@ -676,7 +678,7 @@ while (Test.class.isAssignableFrom(superClass)) {
 
         <ul class="UnorderedList">
           <li class="Item">
-            select from the menu bar Navigate &gt; Open on Selection or
+            select from the menu bar Navigate &gt; Open Declaration or
           </li>
 
           <li class="Item">press <kbd>F3</kbd>.</li>
