--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-8.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-8.htm
@@ -25,6 +25,8 @@ refactoring.</div>
 
 <td ALIGN=LEFT VALIGN=TOP>
 <div CLASS="Para">In the Package Explorer view, select&nbsp;<span CLASS="Filename">junit.framework.TestCase.java</span>.</div>
+<b>Note:</b> Most refactorings also work from a text selection: select the element in the
+Java editor and then start your favorite refactoring.
 </td>
 </tr>
 
