--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-10.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-10.htm
@@ -1,27 +1,21 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<meta http-equiv="Content-Style-Type" content="text/css">
 
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>JUnit</title>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">JUnit</H1>
+<link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css"><title>JUnit</title></head><body bgcolor="#ffffff">
+<h1 class="Head">JUnit</h1>
 
 <ul>
-  <li>You can re-load your test code into a running VM after a test has run. Select 
-    the <b>Keep JUnit running after a test run when debugging</b> checkbox on 
-    the Launch Configuration page.</li>
+  <li>You can change a test and re-run it without having to re-run the entire suite
+. To do so you have to enable the <i>Keep JUnit running after a test run when debugging</i>
+checkbox on the Launch Configuration page and to run in Debug mode. Your VM has to support hot code replace for this feature.</li>
   <li>You can set the JUnit view as a fast view and have it show the results only 
     where there are failures or errors. Select the <b>Window &gt; Preferences 
     &gt; Java &gt; JUnit &gt; Show the JUnit results view only when an error or 
-    failure occurrs</b> checkbox.</li>
+    failure occurs</b> checkbox.</li>
 </ul>
 
 <p><br>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </p>
 
-</BODY>
-</HTML>
+</body></html>
