--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-7.htm
@@ -1,14 +1,9 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<meta http-equiv="Content-Style-Type" content="text/css">
 
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Java Editor</title>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">Java Editor</H1>
+<link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css"><title>Java Editor</title></head><body bgcolor="#ffffff">
+<h1 class="Head">Java Editor</h1>
 <ul>
   <li>You can speed up typing by: 
     <ul>
@@ -16,9 +11,9 @@
         all checkboxes in <b>Window &gt; Preferences &gt; Java &gt; Editor &gt; 
         Problem Indication.</b></li>
       <li>Hiding the overview ruler. Unselect the <b>Window &gt; Preferences &gt; 
-        Java &gt; Editor &gt; Appearance &gt; Show overwier ruler</b> checkbox.</li>
+        Java &gt; Editor &gt; Appearance &gt; Show overview ruler</b> checkbox.</li>
       <li>Turning off the editor -&gt; Outline synchronization. Unselect the <b>Window 
-        &gt; Preferences &gt; Java &gt; Editor &gt; Appearance &gt; Synchonize 
+        &gt; Preferences &gt; Java &gt; Editor &gt; Appearance &gt; Synchronize 
         outline selection on cursor move</b> checkbox.</li>
     </ul>
   </li>
@@ -29,12 +24,14 @@
     Edit the 'filecomment' template (or edit the 'typecomment' template if you 
     need to customize the comment generated for each new type). <b>Note:</b> make 
     sure that the appropriate checkbox(es) under <b>Window &gt; Preferences &gt; 
-    Java &gt; Code Generation</b> is/are selected.<br>
-  </li>
+    Java &gt; Code Generation</b> is/are selected.</li><li>You can&nbsp;quickly select Java code in a syntax-aware
+way using the Structured Selection feature.<br>
+To use Structured Selection (optionally) select some text and press <b>Ctrl+Shift+Arrow
+Up</b> or select <b>Edit &gt; Expands Selection To &gt; Enclosing Element</b>
+from the menu bar.</li>
 </ul>
 
 <p><br>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </p>
 
-</BODY>
-</HTML>
+</body></html>
