--- a/bundles/org.eclipse.platform.doc.user/whatsNew/wnTeam.htm
+++ b/bundles/org.eclipse.platform.doc.user/whatsNew/wnTeam.htm
@@ -23,7 +23,7 @@ What's new in 2.0</H1>
   <P CLASS="Para"> 
   <dt>CVS specific terms throughout</dt>
   <dd>The CVS support uses the same terminology as CVS. This means that the term 
-    branch is used instead of stream, update and commit instead of catchup and 
+    branch is used instead of stream, update and commit instead of catch-up and 
     release, and version tag instead of version.</dd>
   <p></P>
   <P CLASS="Para"> 
@@ -52,7 +52,7 @@ What's new in 2.0</H1>
   <P CLASS="Para"> 
   <dt>Adding resources to CVS control</dt>
   <dd>New resources must now be explicitly added to CVS control. This improves 
-    the users ability to detemine which resources should be under version control 
+    the users ability to determine which resources should be under version control 
     and which ones should be ignored.</dd>
   <p></P>
   <P CLASS="Para"> 
@@ -62,7 +62,7 @@ What's new in 2.0</H1>
     can be set on the <b>Team &gt; CVS</b> preference page.</dd>
   <p></P>
   <P CLASS="Para"> 
-  <dt>Source based differencing filter in Synchronize view and Merge editor</dt>
+  <dt>Source based comparison filter in Synchronize view and Merge editor</dt>
   <dd>The capability to filter out resources whose CVS revision numbers differ 
     but whose contents are the same has been added to the Synchronize view, merge 
     editor and other CVS compare views.</dd>
@@ -70,7 +70,7 @@ What's new in 2.0</H1>
   <P CLASS="Para"> 
   <dt>Override and Update/Override and Commit</dt>
   <dd>In the Synchronize view, conflicts can only be updated or committed using 
-    the override menu items. This provides a safer workflow as Update and Commit 
+    the override menu items. This provides a safer work flow as Update and Commit 
     only work on non-conflicting changes.</dd>
   <p></P>
   <P CLASS="Para"> 
@@ -111,7 +111,7 @@ What's new in 2.0</H1>
   <dt>Synchronize Outgoing changes</dt>
   <dd>For CVS, the <b>Team</b> menu contains the<b> Synchronize Outgoing Changes</b> 
     command which will synchronize only your outgoing changes. This reduces the 
-    amout of network traffic.</dd>
+    amount of network traffic.</dd>
   <p></P>
   <P CLASS="Para"> 
   <dt>Mixing of tags below the project</dt>
